Autocomplete popup: Fix overlapping separator

--- a/resources/ext.blueSpiceExtendedSearch.Autocomplete.less
+++ b/resources/ext.blueSpiceExtendedSearch.Autocomplete.less
@@ -67,7 +67,7 @@ div#bs-extendedsearch-box, div#bs-extendedsearch-mobile-box {
 		vertical-align: top;
 		padding-bottom: 10px;
 		height: inherit;
-		max-height: inherit;
+		max-height: 100%;
 		overflow-y: auto;
 		overflow-x: hidden;
 		display: inline-block;
@@ -128,13 +128,13 @@ div#bs-extendedsearch-box, div#bs-extendedsearch-mobile-box {
 	.bs-extendedsearch-autocomplete-popup-special-cnt {
 		width: 50%;
 		vertical-align: top;
-		border-left: 3px solid @autocomplete-border-color;
+		border-left: 2px solid @autocomplete-separator-border-color;
 		padding-bottom: 10px;
 		display:inline-block;
 		overflow-y: auto;
 		overflow-x: hidden;
 		height: inherit;
-		max-height: inherit;
+		max-height: 100%;
 		.bs-autocomplete-result-selected {
 			background-color: @autocomplete-selected-background-color;
 		}
