--- a/resources/ext.blueSpiceExtendedSearch.variables.less
+++ b/resources/ext.blueSpiceExtendedSearch.variables.less
@@ -14,6 +14,7 @@ highlight portion may increase this height */
 @tools-hover-color: #3e5389;
 
 @autocomplete-border-color: #c6c5c5;
+@autocomplete-separator-border-color: #e9e9e9;
 @autocomplete-top-match-background-color: #f6f4f4;
 @autocomplete-selected-background-color: rgba(62,83,137,0.1);
 @autocomplete-action-button-hover-background-color: #dce6fe;
